--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,6 @@ source:
 
 build:
   number: 0
-  skip: true  # [win32]
 
   rpaths:
     - lib/R/lib/
@@ -24,19 +23,20 @@ build:
 
 requirements:
   build:
+    - {{ compiler('c') }}    # [not win]
+    - {{ compiler('cxx') }}  # [not win]
     - r-base
     - r-rcpp >=0.12.3
     - r-rlang
     - r-lazyeval >=0.1.10
-    - posix                # [win]
-    - {{native}}toolchain  # [win]
-    - gcc                  # [not win]
+    - posix                  # [win]
+    - {{native}}toolchain    # [win]
 
   run:
     - r-base
     - r-rcpp >=0.12.3
     - r-rlang
-    - libgcc  # [not win]
+    - {{native}}gcc-libs     # [win]
 
 test:
   commands:
