--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.3.4' %}
+{% set version = '1.4.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -12,7 +12,7 @@ source:
   url:
     - https://cran.r-project.org/src/contrib/tibble_{{ version }}.tar.gz
     - https://cran.r-project.org/src/contrib/Archive/tibble/tibble_{{ version }}.tar.gz
-  sha256: a7eef7018a68fc07c17c583fb7821a08d6bc381f5961258bffaa6ef6b137760b
+  sha256: 32267fae1ca86abdd37c4683f9d2b1a47b8b65e1977ea3900aa197066c57aa29
 
 
   # patches:
@@ -28,21 +28,23 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: covr, dplyr, knitr (>= 1.5.32), microbenchmark, nycflights13, testthat, rmarkdown, withr
+# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, testthat, rmarkdown, withr
 requirements:
   build:
     - r-base
-    - {{ compiler('cxx') }}      # [not win]
+    - {{ compiler('c') }}        # [not win]
     - {{native}}toolchain        # [win]
     - {{posix}}filesystem        # [win]
     - {{posix}}make
-    - r-rcpp >=0.12.3
+    - r-crayon
+    - r-pillar
     - r-rlang
 
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
-    - r-rcpp >=0.12.3
+    - r-crayon
+    - r-pillar
     - r-rlang
 
 test:
@@ -74,26 +76,26 @@ extra:
 
 # Package: tibble
 # Encoding: UTF-8
-# Version: 1.3.4
+# Version: 1.4.1
 # Title: Simple Data Frames
 # Description: Provides a 'tbl_df' class (the 'tibble') that provides stricter checking and better formatting than the traditional data frame.
 # Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", c("aut", "cre")), person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"), person("Romain", "Francois", , "romain@r-enthusiasts.com", "ctb"), person("RStudio", role = "cph") )
 # URL: http://tibble.tidyverse.org/, https://github.com/tidyverse/tibble
 # BugReports: https://github.com/tidyverse/tibble/issues
 # Depends: R (>= 3.1.0)
-# Imports: methods, rlang, Rcpp (>= 0.12.3), utils
-# Suggests: covr, dplyr, knitr (>= 1.5.32), microbenchmark, nycflights13, testthat, rmarkdown, withr
-# LinkingTo: Rcpp
+# Imports: crayon, methods, pillar, rlang, utils
+# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, testthat, rmarkdown, withr
 # LazyData: yes
 # License: MIT + file LICENSE
 # RoxygenNote: 6.0.1
 # VignetteBuilder: knitr
+# Collate: 'add.R' 'as_tibble.R' 'check-names.R' 'compat-lazyeval.R' 'compat-purrr.R' 'enframe.R' 'exports.R' 'glimpse.R' 'has-name.R' 'tibble.R' 'lst.R' 'new.R' 'repair-names.R' 'rownames.R' 'strrep.R' 'tbl-df.r' 'tibble-pkg.R' 'tribble.R' 'type-sum.r' 'utils-format.r' 'utils.r' 'wrap.R'
 # NeedsCompilation: yes
-# Packaged: 2017-08-21 16:04:36 UTC; muelleki
+# Packaged: 2017-12-24 15:05:17 UTC; muelleki
 # Author: Kirill Muller [aut, cre], Hadley Wickham [aut], Romain Francois [ctb], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-08-22 07:16:29 UTC
+# Date/Publication: 2017-12-25 23:02:26 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
