--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ package:
 source:
   fn: tibble_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/tibble_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/tibble/tibble_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/tibble_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/tibble/tibble_{{ version }}.tar.gz
   sha256: 32267fae1ca86abdd37c4683f9d2b1a47b8b65e1977ea3900aa197066c57aa29
 
 
