--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.4.2' %}
+{% set version = '2.1.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -11,7 +11,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/tibble_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/tibble/tibble_{{ version }}.tar.gz
-  sha256: 11670353ff7059a55066dd075d1534d6a27bc5c3583fb9bc291bf750a75c5b17
+  sha256: 45c777e9fb3731cb15126ce67e70a71eac97022d59efdefc840742d920a03284
 
 build:
   merge_build_host: True  # [win]
@@ -23,7 +23,7 @@ build:
     - lib/R/lib/
     - lib/
 
-# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, rmarkdown, testthat, withr
+# Suggests: bench (>= 1.0.1), covr (>= 3.2.1), dplyr (>= 0.7.8), htmltools (>= 0.3.6), import (>= 1.1.0), knitr (>= 1.21), mockr (>= 0.1), nycflights13 (>= 1.0.0), rmarkdown (>= 1.11), testthat (>= 2.0.1), withr (>= 2.1.2)
 requirements:
   build:
     - {{ compiler('c') }}        # [not win]
@@ -36,18 +36,22 @@ requirements:
 
   host:
     - r-base
-    - r-cli
-    - r-crayon
-    - r-pillar >=1.1.0
-    - r-rlang
+    - r-cli >=1.0.1
+    - r-crayon >=1.3.4
+    - r-fansi >=0.4.0
+    - r-pillar >=1.3.1
+    - r-pkgconfig >=2.0.2
+    - r-rlang >=0.3.1
 
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
-    - r-cli
-    - r-crayon
-    - r-pillar >=1.1.0
-    - r-rlang
+    - r-cli >=1.0.1
+    - r-crayon >=1.3.4
+    - r-fansi >=0.4.0
+    - r-pillar >=1.3.1
+    - r-pkgconfig >=2.0.2
+    - r-rlang >=0.3.1
 
 test:
   commands:
@@ -78,26 +82,26 @@ extra:
 
 # Package: tibble
 # Title: Simple Data Frames
-# Version: 1.4.2
-# Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", c("aut", "cre")), person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"), person("Romain", "Francois", , "romain@r-enthusiasts.com", "ctb"), person("RStudio", role = "cph") )
+# Version: 2.1.1
+# Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", c("aut", "cre")), person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"), person("Romain", "Francois", , "romain@r-enthusiasts.com", "ctb"), person("Jennifer", "Bryan", , "jenny@rstudio.com", "ctb"), person("RStudio", role = "cph") )
 # Description: Provides a 'tbl_df' class (the 'tibble') that provides stricter checking and better formatting than the traditional data frame.
 # License: MIT + file LICENSE
 # URL: http://tibble.tidyverse.org/, https://github.com/tidyverse/tibble
 # BugReports: https://github.com/tidyverse/tibble/issues
 # Depends: R (>= 3.1.0)
-# Imports: cli, crayon, methods, pillar (>= 1.1.0), rlang, utils
-# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, rmarkdown, testthat, withr
+# Imports: cli (>= 1.0.1), crayon (>= 1.3.4), fansi (>= 0.4.0), methods, pillar (>= 1.3.1), pkgconfig (>= 2.0.2), rlang (>= 0.3.1), utils
+# Suggests: bench (>= 1.0.1), covr (>= 3.2.1), dplyr (>= 0.7.8), htmltools (>= 0.3.6), import (>= 1.1.0), knitr (>= 1.21), mockr (>= 0.1), nycflights13 (>= 1.0.0), rmarkdown (>= 1.11), testthat (>= 2.0.1), withr (>= 2.1.2)
 # VignetteBuilder: knitr
 # Encoding: UTF-8
 # LazyData: yes
-# RoxygenNote: 6.0.1
-# Collate: 'add.R' 'as_tibble.R' 'check-names.R' 'compat-lazyeval.R' 'compat-purrr.R' 'enframe.R' 'exports.R' 'glimpse.R' 'has-name.R' 'tibble.R' 'lst.R' 'new.R' 'repair-names.R' 'rownames.R' 'strrep.R' 'tbl-df.r' 'tibble-package.R' 'tribble.R' 'type-sum.r' 'utils-format.r' 'utils.r' 'wrap.R'
+# RoxygenNote: 6.1.1
+# Collate: 'add.R' 'as_tibble.R' 'check-names.R' 'compat-lazyeval.R' 'compat-lifecycle.R' 'compat-name-repair.R' 'compat-purrr.R' 'tribble.R' 'deprecated.R' 'enframe.R' 'exports.R' 'glimpse.R' 'has-name.R' 'lst.R' 'msg-format.R' 'msg.R' 'new.R' 'repair-names.R' 'rownames.R' 'strrep.R' 'subsetting.R' 'tbl-df.r' 'tibble-package.R' 'tibble.R' 'type-sum.r' 'utils-format.r' 'utils.r' 'view.R' 'wrap.R' 'zzz.R'
 # NeedsCompilation: yes
-# Packaged: 2018-01-21 23:58:53 UTC; muelleki
-# Author: Kirill Muller [aut, cre], Hadley Wickham [aut], Romain Francois [ctb], RStudio [cph]
+# Packaged: 2019-03-14 23:24:25 UTC; kirill
+# Author: Kirill Muller [aut, cre], Hadley Wickham [aut], Romain Francois [ctb], Jennifer Bryan [ctb], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2018-01-22 19:41:48 UTC
+# Date/Publication: 2019-03-16 22:50:03 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
